Add RemoteDeviceServices
Centralize services to allow their being partially implemented. Also
clean up device instantiation, so that we get some clarity as to what
is (mostly) going on.

JIRA: NETCONF-914
Change-Id: I4195ff5b94b2d4fb5f074ae86fd7b4e6b0ad7f9d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>